2008-09-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::addToLog): working on bug #2105111:
	"use color for compiler status and errors". Compilation and
	installation status is color coded in the left panel of
	compile/install dialog (Error is red, Success is green). Also
	coloring compiler error messages red in the compiler progress
	panel.

	* RuleSetView.cpp (RuleSetView::updateGroups): fixed bug #2106124:
	"Crash after deletion of (last rule in + whole) rule group".

	* RuleSetView.cpp (RuleSetView::paintCell): working on bug
	#2106280: "option to change color of rule group head". Made rule
	group head colored in "medium dark", actual color depends on
	chosen QT theme.

	* RuleSetView.cpp (RuleTableModel::headerData): fixed bug #2106229
	"Disable-Icon bad position in rule group". Icon that indicates
	that a rule is disabled used to be drawn in the wrong row of the
	ruleset table.

	* ProjectPanel_state_ops.cpp (ProjectPanel::loadLastOpenedLib):
	more for bug #2091225: "Can objects in the left pane remember last
	state.". If there is no record of the last library used by he user
	in the settings, the GUI opens library "User" or the first
	non-system library if there is non named "User". Minor bug-fix to
	prevent desynchronization of the tree view and pull-down list of
	libraries.

2008-09-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::pasteRuleAbove): More checks for
	operations with rules and ruleset on the deleted Policy or NAT
	object. User should not be able to change anything in rule set
	object that has been deleted because it does not have parent
	firewall object.

	* FWWindow.cpp (FWWindow::prepareEditMenu): more fixes for bug
	#2100415: "cannot re-create or clone Routing object". Properly
	synchronizing main menu Edit to make sure user can not delete
	Ruleset objects.

	* instDialog.cpp (instDialog::initiateCopy): fixed bug (no #): if