@@ -214,22 +214,6 @@
        </property>
        <layout class="QGridLayout" >
         <item row="0" column="0" >
-         <spacer>
-          <property name="orientation" >
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType" >
-           <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="sizeHint" >
-           <size>
-            <width>251</width>
-            <height>34</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="1" >
          <widget class="QGroupBox" name="buttonGroup2" >
           <layout class="QGridLayout" >
            <property name="topMargin" >
@@ -239,6 +223,19 @@
             <number>2</number>
            </property>
            <item row="0" column="0" >
+            <spacer>
+             <property name="orientation" >
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" >
+              <size>
+               <width>31</width>
+               <height>26</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="0" column="1" >
             <widget class="QToolButton" name="iconViewBtn" >
              <property name="sizePolicy" >
               <sizepolicy vsizetype="Preferred" hsizetype="Fixed" >
@@ -269,7 +266,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1" >
+           <item row="0" column="2" >
             <widget class="QToolButton" name="listViewBtn" >
              <property name="sizePolicy" >
               <sizepolicy vsizetype="Preferred" hsizetype="Fixed" >
@@ -300,20 +297,27 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="2" >
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>151</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
           </layout>
+         </widget>
+        </item>
+        <item rowspan="2" row="0" column="1" >
+         <widget class="QStackedWidget" name="objectViewsStack" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
+            <horstretch>250</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize" >
+           <size>
+            <width>250</width>
+            <height>100</height>
+           </size>
+          </property>
+          <property name="acceptDrops" >
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="WStackPage" />
          </widget>
         </item>
         <item row="0" column="2" >
@@ -399,26 +403,6 @@
             </widget>
            </item>
           </layout>
-         </widget>
-        </item>
-        <item row="1" column="1" >
-         <widget class="QStackedWidget" name="objectViewsStack" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
-            <horstretch>250</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize" >
-           <size>
-            <width>250</width>
-            <height>100</height>
-           </size>
-          </property>
-          <property name="acceptDrops" >
-           <bool>true</bool>
-          </property>
-          <widget class="QWidget" name="WStackPage" />
          </widget>
         </item>
         <item row="1" column="2" >
